--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,117 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-main{
-    width: 1024px;
-    margin: 0 auto 1000px;
+body{
+    margin: 0 ;
 }
 
 section{
-    height: 700px;
+    padding: 24px;
+}
+
+header{
+    position: sticky;
+    top: 0;
+    background-color: teal;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav a{
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 16px;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header, footer{
+    color: white;
+    padding: 24px;
+}
+
+nav a{
+    color: white;
+}
+
+h2 {
+    margin-bottom: 24px;
+}
+
+figure{
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 12px solid black;
+    box-sizing: border-box;
+    margin-bottom: 12px;
+    background-color: white;
+}
+
+figcaption{
+    background-color: teal;
+    color: white;
+    padding: 24px;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+figure img {
+    width: auto;
+    height: 300px;
+}
+
+.image-items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+main{
+    margin: 0 auto;
+    background-color: blueviolet;
+}
+
+form {
+    padding: 24px;
+    border: 12px solid black;
+    margin: 8px;
+    background-color: teal;
+}
+
+label span{
+    width: 80px;
+    display: inline-block;
+}
+
+label {
+    display: block;
+    margin: 24px;
+    font-size: 24px;
+}
+
+input{
+    padding: 8px;
+    font-size: 20px;
+    border: 4px solid black;
+}
+
+button{
+    margin: 24px;
+    color: white;
+    background-color: black;
+    padding: 24px;
+    font-size: 24px;
 }
